[package]
name = "vedtoob"
version = "0.2.0"
edition = "2024"

[features]
default = ["tls-rustls"]
tls-rustls = ["reqwest/rustls"]
tls-native = ["reqwest/native-tls"]

[dependencies]
ansi-to-tui = "8.0.1"
anyhow = "1.0.100"
bat = "0.26.1"
clap = { version = "4.5.54", features = ["derive"] }
ratatui = "0.30.0"
serde_json = "1.0.149"

[dependencies.reqwest]
version = "0.13.1"
default-features = false
features = ["blocking", "charset", "http2", "json", "system-proxy"]
